Fix unified build issues after 267037@main part 3 https://bugs.webkit.org/show_bug.cgi?id=260521 rdar://problem/114260537

Unreviewed, unified build fix.

* Source/WebCore/html/canvas/WebGLObject.cpp:
(WebCore::WebGLObject::validate const):
* Source/WebCore/html/canvas/WebGLObject.h:
(WebCore::WebGLObject::validate const): Deleted.

Canonical link: https://commits.webkit.org/267133@main